--- a/main.tex
+++ b/main.tex
@@ -16,6 +16,8 @@
 \usepackage{longtable}
 \usepackage{enumitem}
 \usepackage{xcolor}
+\usepackage{helvet}
+\renewcommand{\familydefault}{\sfdefault}
 
 % ============================================
 % SEITENEINSTELLUNGEN
@@ -63,7 +65,7 @@
     \vspace{-2cm}
     % \includegraphics[width=0.3\textwidth]{img/logo.png}\\[1cm]
     \textbf{Businessplan}\\[0.5cm]
-    \Large FreshGuard - Intelligente Lebensmittelverwaltung
+    \Large FreshGuard - Intelligente Lebensmittelverwaltung 
 }
 \author{
     Maike Abel\\
